# get_flight_data

./: .gitignore  Cargo.toml  README.md  example_userdata.json
src/: dir_manager.rs  get_json.rs  json_operations.rs  logic.rs  main.rs
