[package]
name = "get_flight_data"
version = "0.1.0"
authors = ["HaDeSMonsta"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.113"
serde = { version = "1.0.196", features = ["derive"] }
reqwest = { version = "0.11.24", features = ["blocking"] }
chrono = "0.4.34"
eframe = "0.26.1"
tokio = { version = "1.36.0", features = ["full"] }